warn if simd is disabled (or jdk does not support it)